--- a/index.html
+++ b/index.html
@@ -6,10 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/index.css" />
+    <script src="js/data.js"></script>
+    <script src="js/index.js"></script>
   </head>
   <body>
-    <div id="main">
-      <h1>张超的博客</h1>
+    <div id="all">
+      <div id="imgleft">
+        <img src="imgs/1.jpg" />
+      </div>
+      <div id="imgright">
+        <div id="imgright-top"></div>
+        <ul id="ulist">
+          <!-- <li><img src="imgs/1.jpg" alt="" /></li>
+          <li><img src="imgs/2.jpg" alt="" /></li>
+          <li><img src="imgs/3.jpg" alt="" /></li>
+          <li><img src="imgs/4.jpg" alt="" /></li>
+          <li><img src="imgs/5.jpg" alt="" /></li>
+          <li><img src="imgs/6.jpg" alt="" /></li>
+          <li><img src="imgs/1.jpg" alt="" /></li>
+          <li><img src="imgs/2.jpg" alt="" /></li> -->
+        </ul>
+        <div id="imgright-buttom"></div>
+      </div>
+      <!-- 滑槽 -->
+      <div class="scroll">
+        <div class="scrollIn"></div>
+      </div>
     </div>
   </body>
 </html>
